Started adding soundings to json's.

--- a/create_mxl_cases.ipynb
+++ b/create_mxl_cases.ipynb
@@ -34,10 +34,12 @@
      "text": [
       "Found tuned case for \"tortosa\", loading...\n",
       "Found tuned case for \"katsimidi\", loading...\n",
+      "Found 1 sounding(s) for \"katsimidi\".\n",
       "Found tuned case for \"mequinensa\", loading...\n",
       "Found tuned case for \"vilanova-da-meia\", loading...\n",
       "Found tuned case for \"varnavas\", loading...\n",
       "Found tuned case for \"la-figuera\", loading...\n",
+      "Found 1 sounding(s) for \"la-figuera\".\n",
       "Found tuned case for \"orista\", loading...\n",
       "Found tuned case for \"pont-de-vilomara\", loading...\n",
       "Found tuned case for \"santa-coloma\", loading...\n"
@@ -75,39 +77,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-05-28 08:00:00 to 2024-05-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-05-28 08:00:00 to 2024-05-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2024-05-28 00:00:00 - model_an local\n",
       " - Found 2024-05-28 00:00:00 - pressure_an local\n",
       " - Found 2024-05-28 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-06-29 11:00:00 to 2024-06-29 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-06-29 11:00:00 to 2024-06-29 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2024-06-29 00:00:00 - model_an local\n",
       " - Found 2024-06-29 00:00:00 - pressure_an local\n",
       " - Found 2024-06-29 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-07-07 15:00:00 to 2024-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-07-07 15:00:00 to 2024-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2024-07-07 00:00:00 - model_an local\n",
       " - Found 2024-07-07 00:00:00 - pressure_an local\n",
       " - Found 2024-07-07 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-08-09 13:00:00 to 2024-08-09 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-08-09 13:00:00 to 2024-08-09 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2024-08-09 00:00:00 - model_an local\n",
       " - Found 2024-08-09 00:00:00 - pressure_an local\n",
       " - Found 2024-08-09 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-08-11 12:00:00 to 2024-08-11 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-08-11 12:00:00 to 2024-08-11 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2024-08-11 00:00:00 - model_an local\n",
       " - Found 2024-08-11 00:00:00 - pressure_an local\n",
       " - Found 2024-08-11 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-07-28 13:00:00 to 2024-07-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2024-07-28 13:00:00 to 2024-07-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2024-07-28 00:00:00 - model_an local\n",
       " - Found 2024-07-28 00:00:00 - pressure_an local\n",
       " - Found 2024-07-28 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2023-10-05 10:00:00 to 2023-10-05 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2023-10-05 10:00:00 to 2023-10-05 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2023-10-05 00:00:00 - model_an local\n",
       " - Found 2023-10-05 00:00:00 - pressure_an local\n",
       " - Found 2023-10-05 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2022-07-07 11:00:00 to 2022-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2022-07-07 11:00:00 to 2022-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2022-07-07 00:00:00 - model_an local\n",
       " - Found 2022-07-07 00:00:00 - pressure_an local\n",
       " - Found 2022-07-07 00:00:00 - surface_an local\n",
-      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2025-06-17 17:00:00 to 2025-06-17 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mDownloading ERA5 for period: 2025-06-17 17:00:00 to 2025-06-17 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Found 2025-06-17 00:00:00 - model_an local\n",
       " - Found 2025-06-17 00:00:00 - pressure_an local\n",
       " - Found 2025-06-17 00:00:00 - surface_an local\n"
@@ -131,48 +133,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[94m\u001b[1mReading ERA5 from 2024-05-28 08:00:00 to 2024-05-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2024-05-28 08:00:00 to 2024-05-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 40.82/0.59 (requested = 40.82/0.59), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2024-06-29 11:00:00 to 2024-06-29 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2024-06-29 11:00:00 to 2024-06-29 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 38.18/23.79 (requested = 38.18/23.79), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2024-07-07 15:00:00 to 2024-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2024-07-07 15:00:00 to 2024-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 41.38/0.32 (requested = 41.38/0.32), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2024-08-09 13:00:00 to 2024-08-09 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2024-08-09 13:00:00 to 2024-08-09 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 41.95/1.07 (requested = 41.95/1.07), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2024-08-11 12:00:00 to 2024-08-11 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2024-08-11 12:00:00 to 2024-08-11 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 38.24/23.92 (requested = 38.24/23.92), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2024-07-28 13:00:00 to 2024-07-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2024-07-28 13:00:00 to 2024-07-28 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 41.21/0.74 (requested = 41.21/0.74), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2023-10-05 10:00:00 to 2023-10-05 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2023-10-05 10:00:00 to 2023-10-05 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 41.90/2.05 (requested = 41.90/2.05), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2022-07-07 11:00:00 to 2022-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2022-07-07 11:00:00 to 2022-07-07 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 41.69/1.90 (requested = 41.69/1.90), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n",
-      "\u001b[94m\u001b[1mReading ERA5 from 2025-06-17 17:00:00 to 2025-06-17 23:00:00\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
-      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:12]\u001b[0m\n",
+      "\u001b[94m\u001b[1mReading ERA5 from 2025-06-17 17:00:00 to 2025-06-17 23:00:00\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
+      "\u001b[94m\u001b[1mCalculating large-scale forcings\u001b[0m \u001b[92m[11-07: 11:45]\u001b[0m\n",
       " - Using nearest lat/lon = 41.52/1.37 (requested = 41.52/1.37), distance ~= 0.0 km\n",
       " - Averaging ERA5 over a 0.75°×0.75° spatial area.\n",
       " - Selected grid point is over land.\n"
@@ -195,7 +197,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c16a23cfa454452ba3acb87de134b0c",
+       "model_id": "b3b7dc5838854e28af0278b6c9334ad4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33352bcc361d446ba6f9f3ea64e30c06",
+       "model_id": "11dd8c14cd3a4e0091cf5846a24e9342",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b7c86f993a743828d48d28fafbb44d7",
+       "model_id": "562d27a9816348259049fc7b067dbe48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f80de9629799490db2c6211bcaf2685c",
+       "model_id": "15c1b0e238104d7eb582509177e96253",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21103b8736fe4a538b1dfa0608c90d6c",
+       "model_id": "6c2d791fc8cb48ee833f7ef687a45e2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73d550061d9d45b2a1d05a5c6d703d84",
+       "model_id": "fdc18ecc5db042bc822a7901fc40b643",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,7 +347,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f095ca89b98945af9c9d5a2fdb8e777d",
+       "model_id": "d5a159c89a76464f8d75daaf58d1d3ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48cc199487fc4117a08fd2a130a06378",
+       "model_id": "4eb5aad478ce4a1cbebe1c59d7e887c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "273962c97feb484d8e8d5c6ac7b6c8d4",
+       "model_id": "aa3ef8b0d4d9420f8246f4f5abc75d03",
        "version_major": 2,
        "version_minor": 0
       },
